gcc/testsuite/rust/rustc/ui/static/static-closures.rs
fn main() {
    static || {};
// { dg-error ".E0697." "" { target *-*-* } .-1 }
}

